# MCRW_cDTI

./: CMakeLists.txt  Dockerfile  README.md  SimulationRunner.cpp  SimulationRunner.h  convergence.ipynb  process_simulation.ipynb  run_sim.cpp  sequence.yaml
Geometry/: polygon.cpp  polygon.h  polyhedronSet.cpp  polyhedronSet.h
MRI/: sequence.cpp  sequence.h
MonteCarlo/: simulation.cpp  simulation.h  walkers.cpp  walkers.h
Substrate/: substrate.cpp  substrate.h  transform.cpp  transform.h  utility_substrate.cpp  utility_substrate.h
Utility/: fileWriter.cpp  fileWriter.h  offMeshReader.h
scripts/: hpc_example.sh  tensor_fitting.py
testing/: oneGenerator.h  seed_1_angle001kappa500_dt_100.000000_simple_no_strain_final.csv  seed_1_angle001kappa500_dt_100.000000_simple_no_strain_init.csv  seed_1_angle001kappa500_dt_100.000000_simple_strain_relaxation_final.csv  seed_1_angle001kappa500_dt_100.000000_simple_strain_systole_final.csv  seed_1_angle0kappa500_dt_100.000000_simple_no_strain_final.csv  seed_1_angle0kappa500_dt_100.000000_simple_no_strain_init.csv  seed_1_angle0kappa500_dt_100.000000_simple_strain_relaxation_final.csv  seed_1_angle0kappa500_dt_100.000000_simple_strain_systole_final.csv  seed_1_kappa500_dt_100.000000_simple_no_strain_final.csv  seed_1_kappa500_dt_100.000000_simple_strain_relaxation_final.csv  seed_1_kappa500_dt_100.000000_simple_strain_systole_final.csv  seed_1_kappa500_dt_100.000000_simple_strain_systole_init.csv  testing_polygon.cpp  testing_sequence.cpp  testing_simulation.cpp  testing_substrate.cpp
testing/data/: sequence_testing.yaml
